--- a/udemy-python3-deep-dive/part1/Section 02 - A Quick Refresher/02 - Conditionals.ipynb
+++ b/udemy-python3-deep-dive/part1/Section 02 - A Quick Refresher/02 - Conditionals.ipynb
@@ -2,228 +2,227 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Conditionals"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "A conditional is a construct that allows you to branch your code based on conditions being met (or not)"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "This is achieved using **if**, **elif** and **else** or the **ternary operator** (aka conditional expression)"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 1,
+   "source": [
+    "a = 2\r\n",
+    "if a < 3:\r\n",
+    "    print('a < 3')\r\n",
+    "else:\r\n",
+    "    print('a >= 3')"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "a < 3\n"
      ]
     }
    ],
-   "source": [
-    "a = 2\n",
-    "if a < 3:\n",
-    "    print('a < 3')\n",
-    "else:\n",
-    "    print('a >= 3')"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "**if** statements can be nested:"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 2,
+   "source": [
+    "a = 15\r\n",
+    "\r\n",
+    "if a < 5:\r\n",
+    "    print('a < 5')\r\n",
+    "else:\r\n",
+    "    if a < 10:\r\n",
+    "        print('5 <= a < 10')\r\n",
+    "    else:\r\n",
+    "        print('a >= 10')"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "a >= 10\n"
      ]
     }
    ],
-   "source": [
-    "a = 15\n",
-    "\n",
-    "if a < 5:\n",
-    "    print('a < 5')\n",
-    "else:\n",
-    "    if a < 10:\n",
-    "        print('5 <= a < 10')\n",
-    "    else:\n",
-    "        print('a >= 10')"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "But the **elif** statement provides far better readability:"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 3,
+   "source": [
+    "a = 15\r\n",
+    "if a < 5:\r\n",
+    "    print('a < 5')\r\n",
+    "elif a < 10:\r\n",
+    "    print('5 <= a < 10')\r\n",
+    "else:\r\n",
+    "    print('a >= 10')"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "a >= 10\n"
      ]
     }
    ],
-   "source": [
-    "a = 15\n",
-    "if a < 5:\n",
-    "    print('a < 5')\n",
-    "elif a < 10:\n",
-    "    print('5 <= a < 10')\n",
-    "else:\n",
-    "    print('a >= 10')"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "In Python, **elif** is the closest you'll find to the switch/case statement available in some other languages."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Python also provides a conditional expression (ternary operator):\n",
     "\n",
     "X if (condition) else Y\n",
     "\n",
     "returns (and evaluates) X if (condition) is True, otherwise returns (and evaluates) Y"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 4,
+   "source": [
+    "a = 5\r\n",
+    "res = 'a < 10' if a < 10 else 'a >= 10'\r\n",
+    "print(res)"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "a < 10\n"
      ]
     }
    ],
-   "source": [
-    "a = 5\n",
-    "res = 'a < 10' if a < 10 else 'a >= 10'\n",
-    "print(res)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 5,
+   "source": [
+    "a = 15\r\n",
+    "res = 'a < 10' if a < 10 else 'a >= 10'\r\n",
+    "print(res)"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "a >= 10\n"
      ]
     }
    ],
-   "source": [
-    "a = 15\n",
-    "res = 'a < 10' if a < 10 else 'a >= 10'\n",
-    "print(res)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Note that **X** and **Y** can be any expression, not just literal values:"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
+   "source": [
+    "def say_hello():\r\n",
+    "    print('Hello!')\r\n",
+    "    \r\n",
+    "def say_goodbye():\r\n",
+    "    print('Goodbye!')"
+   ],
+   "outputs": [],
    "metadata": {
     "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def say_hello():\n",
-    "    print('Hello!')\n",
-    "    \n",
-    "def say_goodbye():\n",
-    "    print('Goodbye!')"
-   ]
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
+   "execution_count": 7,
+   "source": [
+    "a = 5\r\n",
+    "say_hello() if a < 10 else say_goodbye()"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Hello!\n"
      ]
     }
    ],
-   "source": [
-    "a = 5\n",
-    "say_hello() if a < 10 else say_goodbye()"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
+   "execution_count": 8,
+   "source": [
+    "a = 15\r\n",
+    "say_hello() if a < 10 else say_goodbye()"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Goodbye!\n"
      ]
     }
    ],
-   "source": [
-    "a = 15\n",
-    "say_hello() if a < 10 else say_goodbye()"
-   ]
+   "metadata": {}
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.8 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -235,7 +234,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.8.8"
+  },
+  "interpreter": {
+   "hash": "9b012e293b5a2aed87bbef946c0abe67acd9832c431e6e846756da6baacdda87"
   }
  },
  "nbformat": 4,
