--- a/udemy-python3-deep-dive/part1/Section 02 - A Quick Refresher/04 - The While Loop.ipynb
+++ b/udemy-python3-deep-dive/part1/Section 02 - A Quick Refresher/04 - The While Loop.ipynb
@@ -2,34 +2,39 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### While Loops"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "The **while** loop is a way to repeatg a block of code as long as a specified condition is met."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "``while <exp is true>:\n",
     "    code block``"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 6,
+   "source": [
+    "i = 0\r\n",
+    "while i < 5:\r\n",
+    "    print(i)\r\n",
+    "    i += 1"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "0\n",
       "1\n",
@@ -39,37 +44,31 @@
      ]
     }
    ],
-   "source": [
-    "i = 0\n",
-    "while i < 5:\n",
-    "    print(i)\n",
-    "    i += 1"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Note that there is no guarantee that a **while** loop will execute at all, not even once, because the condition is tested **before** the loop runs."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
+   "source": [
+    "i = 5\r\n",
+    "while i < 5:\r\n",
+    "    print(i)\r\n",
+    "    i += 1"
+   ],
+   "outputs": [],
    "metadata": {
     "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "i = 5\n",
-    "while i < 5:\n",
-    "    print(i)\n",
-    "    i += 1"
-   ]
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Some languages have a concept of a while loop that is guaranteed to execute at least once:\n",
     "\n",
@@ -77,146 +76,148 @@
     "    code block\n",
     "while <exp is true>\n",
     "``"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "There is no such thing in Python, but it's easy enough to write code that works that way.\n",
     "\n",
     "We create an infinite loop and test the condition inside the loop and break out of the loop when the condition becomes false:"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 8,
+   "source": [
+    "i = 5\r\n",
+    "\r\n",
+    "while True:\r\n",
+    "    print(i)\r\n",
+    "    if i >= 5:\r\n",
+    "        break\r\n"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "5\n"
      ]
     }
    ],
-   "source": [
-    " i = 5\n",
-    "\n",
-    "while True:\n",
-    "    print(i)\n",
-    "    if i >= 5:\n",
-    "        break\n"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "As you can see the loop executed once (and will always execute at least once, no matter the starting value of i.)\n",
     "\n",
     "This is a standard pattern and can be useful in a variety of scenarios.\n",
     "\n",
     "A simple example might be getting repetitive user input until the user performs and action or provides some specific value."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "raw",
-   "metadata": {},
    "source": [
     "For example, suppose we want to use the console to let users enter their name. We just want to make sure their name is at least 2 characters long, contains printable characters only, and only contains alphabetic characters:"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "We might try it this way:"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
+   "source": [
+    "min_length = 2\r\n",
+    "\r\n",
+    "name = input('Please enter your name:')\r\n",
+    "\r\n",
+    "while not(len(name) >= min_length  and name.isprintable() and name.isalpha()):\r\n",
+    "    name = input('Please enter your name:')\r\n",
+    "\r\n",
+    "print('Hello, {0}'.format(name))\r\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Hello, abc\n"
+     ]
+    }
+   ],
    "metadata": {
     "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please enter your name:a123\n",
-      "Please enter your name:a\n",
-      "Please enter your name:fred\n",
-      "Hello, fred\n"
-     ]
-    }
-   ],
-   "source": [
-    "min_length = 2\n",
-    "\n",
-    "name = input('Please enter your name:')\n",
-    "\n",
-    "while not(len(name) >= min_length  and name.isprintable() and name.isalpha()):\n",
-    "    name = input('Please enter your name:')\n",
-    "\n",
-    "print('Hello, {0}'.format(name))\n"
-   ]
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "This works just fine, but notice that we had to write the code to elicit user input **twice** in our code. This is not good practice, and we can easily clean this up as follows:"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "execution_count": 2,
+   "source": [
+    "min_length = 2\r\n",
+    "\r\n",
+    "while True:\r\n",
+    "    name = input('Please enter your name:')\r\n",
+    "    if len(name) >= min_length  and name.isprintable() and name.isalpha():\r\n",
+    "        break\r\n",
+    "\r\n",
+    "print('Hello, {0}'.format(name))"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Please enter your name:a\n",
-      "Please enter your name:123\n",
-      "Please enter your name:fred\n",
-      "Hello, fred\n"
+      "Hello, abc\n"
      ]
     }
    ],
-   "source": [
-    "min_length = 2\n",
-    "\n",
-    "while True:\n",
-    "    name = input('Please enter your name:')\n",
-    "    if len(name) >= min_length  and name.isprintable() and name.isalpha():\n",
-    "        break\n",
-    "\n",
-    "print('Hello, {0}'.format(name))"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "We saw how the **break** statement exits the **while** loop and execution resumes on the line immediately after the while code block.\n",
     "\n",
     "Sometimes, we just want to cut the current iteration short, but continue looping, without exiting the loop itself.\n",
     "\n",
     "This is done using the **continue** statement:"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
+   "execution_count": 3,
+   "source": [
+    "a = 0\r\n",
+    "while a < 10:\r\n",
+    "    a += 1\r\n",
+    "    if a % 2:\r\n",
+    "        continue\r\n",
+    "    print(a)"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "2\n",
       "4\n",
@@ -226,149 +227,141 @@
      ]
     }
    ],
-   "source": [
-    "a = 0\n",
-    "while a < 10:\n",
-    "    a += 1\n",
-    "    if a % 2:\n",
-    "        continue\n",
-    "    print(a)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Note that there are much better ways of doing this! We'll cover that in later videos (comprehensions, generators, etc)"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "The **while** loop also can be used with an **else** clause!!"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "The **else** is executed if the while loop terminated without hitting a **break** statement (we say the loop terminated **normally**)"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Suppose we want to test if some value is present in some list, and if not we want to append it to the list (again there are better ways of doing this):"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "First, here's how we might do it without the benefit of the **else** clause:"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
+   "execution_count": 5,
+   "source": [
+    "l = [1, 2, 3]\r\n",
+    "val = 10\r\n",
+    "\r\n",
+    "found = False\r\n",
+    "idx = 0\r\n",
+    "while idx < len(l):\r\n",
+    "    if l[idx] == val:\r\n",
+    "        found = True\r\n",
+    "        break\r\n",
+    "    idx += 1\r\n",
+    "    \r\n",
+    "if not found:\r\n",
+    "    l.append(val)\r\n",
+    "print(l)"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "[1, 2, 3, 10]\n"
      ]
     }
    ],
-   "source": [
-    "l = [1, 2, 3]\n",
-    "val = 10\n",
-    "\n",
-    "found = False\n",
-    "idx = 0\n",
-    "while idx < len(l):\n",
-    "    if l[idx] == val:\n",
-    "        found = True\n",
-    "        break\n",
-    "    idx += 1\n",
-    "    \n",
-    "if not found:\n",
-    "    l.append(val)\n",
-    "print(l)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Using the **else** clause is easier:"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
+   "execution_count": 9,
+   "source": [
+    "l = [1, 2, 3]\r\n",
+    "val = 10\r\n",
+    "\r\n",
+    "idx = 0\r\n",
+    "while idx < len(l):\r\n",
+    "    if l[idx] == val:\r\n",
+    "        break\r\n",
+    "    idx += 1\r\n",
+    "else:\r\n",
+    "    l.append(val)\r\n",
+    "\r\n",
+    "print(l)"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "[1, 2, 3, 10]\n"
      ]
     }
    ],
-   "source": [
-    "l = [1, 2, 3]\n",
-    "val = 10\n",
-    "\n",
-    "idx = 0\n",
-    "while idx < len(l):\n",
-    "    if l[idx] == val:\n",
-    "        break\n",
-    "    idx += 1\n",
-    "else:\n",
-    "    l.append(val)\n",
-    "\n",
-    "print(l)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
+   "execution_count": 10,
+   "source": [
+    "l = [1, 2, 3]\r\n",
+    "val = 3\r\n",
+    "\r\n",
+    "idx = 0\r\n",
+    "while idx < len(l):\r\n",
+    "    if l[idx] == val:\r\n",
+    "        break\r\n",
+    "    idx += 1\r\n",
+    "else:\r\n",
+    "    l.append(val)\r\n",
+    "\r\n",
+    "print(l)"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "[1, 2, 3]\n"
      ]
     }
    ],
-   "source": [
-    "l = [1, 2, 3]\n",
-    "val = 3\n",
-    "\n",
-    "idx = 0\n",
-    "while idx < len(l):\n",
-    "    if l[idx] == val:\n",
-    "        break\n",
-    "    idx += 1\n",
-    "else:\n",
-    "    l.append(val)\n",
-    "\n",
-    "print(l)"
-   ]
+   "metadata": {}
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.8 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -380,7 +373,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.8.8"
+  },
+  "interpreter": {
+   "hash": "9b012e293b5a2aed87bbef946c0abe67acd9832c431e6e846756da6baacdda87"
   }
  },
  "nbformat": 4,
