--- a/my-env/example_any_1.ipynb
+++ b/my-env/example_any_1.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 1,
       "metadata": {
         "id": "yXjDUBYBnjJD"
       },
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
@@ -176,7 +176,7 @@
               "[2335 rows x 5 columns]"
             ]
           },
-          "execution_count": 27,
+          "execution_count": 2,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -205,7 +205,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -475,7 +475,7 @@
               "[2084 rows x 12 columns]"
             ]
           },
-          "execution_count": 28,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -505,7 +505,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 5,
       "metadata": {
         "id": "r_gqDthFALeK"
       },
@@ -529,7 +529,8 @@
         }
       ],
       "source": [
-        "env = StocksEnv(df=price_history, frame_bound=(50, 303), window_size=10)\n",
+        "#env = StocksEnv(df=price_history, frame_bound=(50, 303), window_size=10)\n",
+        "env = gym.make('StocksEnvAny1-v0', df=price_history, frame_bound=(50, 303), window_size=10)\n",
         "\n",
         "observation = env.reset(seed=None)\n",
         "while True:\n",
