--- a/my-env/example_any_2.ipynb
+++ b/my-env/example_any_2.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 1,
       "metadata": {
         "id": "yXjDUBYBnjJD"
       },
@@ -514,25 +514,13 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "60\n"
-          ]
-        },
-        {
-          "ename": "TypeError",
-          "evalue": "unsupported operand type(s) for +: 'int' and 'tuple'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "Cell \u001b[1;32mIn[13], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m env \u001b[38;5;241m=\u001b[39m StocksEnv(df\u001b[38;5;241m=\u001b[39mprice_history, start_idx\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m60\u001b[39m)\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(env\u001b[38;5;241m.\u001b[39mstart_idx)\n\u001b[1;32m----> 4\u001b[0m observation \u001b[38;5;241m=\u001b[39m env\u001b[38;5;241m.\u001b[39mreset(seed\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2023\u001b[39m)\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[0;32m      6\u001b[0m     action \u001b[38;5;241m=\u001b[39m env\u001b[38;5;241m.\u001b[39maction_space\u001b[38;5;241m.\u001b[39msample()\n",
-            "File \u001b[1;32md:\\Mbrane\\Repos\\Proeftuin-py\\my-env\\env_any_2\\trading_env.py:192\u001b[0m, in \u001b[0;36mTradingEnv.reset\u001b[1;34m(self, seed, options)\u001b[0m\n\u001b[0;32m    190\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstart_idx\n\u001b[0;32m    191\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcnt \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m--> 192\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mprices, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msignal_features, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfeature_dim_len \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_process_data(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstart_idx)\n\u001b[0;32m    193\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_init_flag:\n\u001b[0;32m    194\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mshape \u001b[38;5;241m=\u001b[39m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mwindow_size, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfeature_dim_len)\n",
-            "File \u001b[1;32md:\\Mbrane\\Repos\\Proeftuin-py\\my-env\\env_any_2\\stocks_env.py:96\u001b[0m, in \u001b[0;36mStocksEnv._process_data\u001b[1;34m(self, start_idx)\u001b[0m\n\u001b[0;32m     94\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_start_tick\n\u001b[0;32m     95\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_start_tick \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstart_idx\n\u001b[1;32m---> 96\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_end_tick \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_start_tick \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39meps_length \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m     98\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m prices, selected_feature, feature_dim_len\n",
-            "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'tuple'"
+            "info: {'total_reward': -1.7805931786682951, 'position': 0}\n"
           ]
         }
       ],
       "source": [
-        "env = StocksEnv(df=price_history, start_idx=60)\n",
+        "#env = StocksEnv(df=price_history, start_idx=60)\n",
+        "env = gym.make('StocksEnvAny2-v0', df=price_history, start_idx=60, max_episode_steps=1000, window_size=60)\n",
         "\n",
         "observation = env.reset(seed=2023)\n",
         "while True:\n",
@@ -543,10 +531,10 @@
         "    if terminated or truncated:\n",
         "        print(\"info:\", info)\n",
         "        break\n",
-        "\n",
-        "plt.cla()\n",
-        "env.unwrapped.render_all()\n",
-        "plt.show()"
+        "#plt.cla()\n",
+        "#env.unwrapped.render()\n",
+        "#env.render()\n",
+        "#plt.show()"
       ]
     }
   ],
