--- a/akarp/nn-zero-to-hero/micrograd_exercises.ipynb
+++ b/akarp/nn-zero-to-hero/micrograd_exercises.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "id": "3Jx9fCXl5xHd"
    },
@@ -48,11 +48,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "qXaH59eL9zxf"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OK for dim 0: expected -12.353553390593273, yours returns -12.353553390593273\n",
+      "OK for dim 1: expected 10.25699027111255, yours returns 10.25699027111255\n",
+      "OK for dim 2: expected 0.0625, yours returns 0.0625\n"
+     ]
+    }
+   ],
    "source": [
     "# write the function df that returns the analytical gradient of f\n",
     "# i.e. use your skills from calculus to take the derivative, then implement the formula\n",
@@ -70,7 +80,8 @@
     "# d/dc(-a^3 + sin(3 b) - 1/c + b^2.5 - a^0.5) = 1/c^2\n",
     "\n",
     "def gradf(a, b, c):\n",
-    "  return [0, 0, 0] # todo, return [df/da, df/db, df/dc]\n",
+    "  # return [df/da, df/db, df/dc]\n",
+    "  return [-3*a*a - 0.5*a**-0.5, 2.5*b**1.5 + 3*cos(3*b), 1/c**2]\n",
     "\n",
     "# expected answer is the list of\n",
     "ans = [-12.353553390593273, 10.25699027111255, 0.0625]\n",
@@ -82,18 +93,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "id": "_27n-KTA9Qla"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OK for dim 0: expected -12.353553390593273, yours returns -12.353559348809995\n",
+      "OK for dim 1: expected 10.25699027111255, yours returns 10.256991666679482\n",
+      "OK for dim 2: expected 0.0625, yours returns 0.062499984743169534\n"
+     ]
+    }
+   ],
    "source": [
     "# now estimate the gradient numerically without any calculus, using\n",
     "# the approximation we used in the video.\n",
     "# you should not call the function df from the last cell\n",
     "\n",
     "# -----------\n",
-    "numerical_grad = [0, 0, 0] # TODO\n",
+    "# numerical_grad = [0, 0, 0] # TODO\n",
+    "# -----------\n",
+    "a = 2\n",
+    "b = 3\n",
+    "c = 4\n",
+    "eps = 1e-6\n",
+    "d2 = f(a+eps, b, c)\n",
+    "d1 = f(a, b, c)\n",
+    "da = (d2 - d1)/eps\n",
+    "d2 = f(a, b+eps, c)\n",
+    "db = (d2 - d1)/eps\n",
+    "d2 = f(a, b, c+eps)\n",
+    "dc = (d2 - d1)/eps\n",
+    "numerical_grad = [da, db, dc] \n",
     "# -----------\n",
     "\n",
     "for dim in range(3):\n",
@@ -103,11 +137,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "id": "BUqsGb5o_h2P"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OK for dim 0: expected -12.353553390593273, yours returns -12.353559348809995\n",
+      "OK for dim 1: expected 10.25699027111255, yours returns 10.256991666679482\n",
+      "OK for dim 2: expected 0.0625, yours returns 0.062499984743169534\n"
+     ]
+    }
+   ],
    "source": [
     "# there is an alternative formula that provides a much better numerical\n",
     "# approximation to the derivative of a function.\n",
@@ -116,7 +160,12 @@
     "# better approximation.\n",
     "\n",
     "# -----------\n",
-    "numerical_grad2 = [0, 0, 0] # TODO\n",
+    "# numerical_grad2 = [0, 0, 0] # TODO\n",
+    "# -----------\n",
+    "da = (f(a+eps, b, c) - f(a, b, c))/eps\n",
+    "db = (f(a, b+eps, c) - f(a, b, c))/eps\n",
+    "dc = (f(a, b, c+eps) - f(a, b, c))/eps\n",
+    "numerical_grad2 = [da, db, dc] \n",
     "# -----------\n",
     "\n",
     "for dim in range(3):\n",
@@ -135,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "id": "nAPe_RVrCTeO"
    },
@@ -171,7 +220,63 @@
     "  # ------\n",
     "  # re-implement all the other functions needed for the exercises below\n",
     "  # your code here\n",
-    "  # TODO\n",
+    "\n",
+    "  def __mul__(self, other):\n",
+    "    other = other if isinstance(other, Value) else Value(other)\n",
+    "    out = Value(self.data * other.data, (self, other), '*')\n",
+    "    \n",
+    "    def _backward():\n",
+    "      self.grad += other.data * out.grad\n",
+    "      other.grad += self.data * out.grad\n",
+    "    out._backward = _backward\n",
+    "      \n",
+    "    return out\n",
+    "    \n",
+    "  def exp(self):\n",
+    "    x = self.data\n",
+    "    out = Value(exp(x), (self, ), 'exp')\n",
+    "    \n",
+    "    def _backward():\n",
+    "      self.grad += out.data * out.grad\n",
+    "    out._backward = _backward\n",
+    "    \n",
+    "    return out\n",
+    "\n",
+    "  def __radd__(self, other): # other + self\n",
+    "    return self + other\n",
+    "\n",
+    "  def __truediv__(self, other): # self / other\n",
+    "    return self * other**-1\n",
+    "  \n",
+    "  def __neg__(self): # -self\n",
+    "    return self * -1\n",
+    "\n",
+    "  def __sub__(self, other): # self - other\n",
+    "    return self + (-other)\n",
+    "  \n",
+    "  def __rmul__(self, other): # other * self\n",
+    "    return self * other\n",
+    "\n",
+    "  def __pow__(self, other):\n",
+    "    assert isinstance(other, (int, float)), \"only supporting int/float powers for now\"\n",
+    "    out = Value(self.data**other, (self,), f'**{other}')\n",
+    "\n",
+    "    def _backward():\n",
+    "        self.grad += other * (self.data ** (other - 1)) * out.grad\n",
+    "    out._backward = _backward\n",
+    "\n",
+    "    return out\n",
+    "\n",
+    "  def log(self):\n",
+    "    x = self.data\n",
+    "    out = Value(log(x), (self, ), 'log')\n",
+    "    \n",
+    "    def _backward():\n",
+    "      self.grad += (1 / x) * out.grad\n",
+    "    out._backward = _backward\n",
+    "    \n",
+    "    return out\n",
+    "\n",
     "  # ------\n",
     "\n",
     "  def backward(self): # exactly as in video\n",
@@ -192,11 +297,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "id": "VgWvwVQNAvnI"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.1755153626167147\n",
+      "OK for dim 0: expected 0.041772570515350445, yours returns 0.041772570515350445\n",
+      "OK for dim 1: expected 0.8390245074625319, yours returns 0.8390245074625319\n",
+      "OK for dim 2: expected 0.005653302662216329, yours returns 0.005653302662216329\n",
+      "OK for dim 3: expected -0.8864503806400986, yours returns -0.8864503806400986\n"
+     ]
+    }
+   ],
    "source": [
     "# without referencing our code/video __too__ much, make this cell work\n",
     "# you'll have to implement (in some cases re-implemented) a number of functions\n",
@@ -227,15 +344,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {
     "id": "q7ca1SVAGG1S"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([ 0.,  3., -2.,  1.], requires_grad=True)\n",
+      "tensor([0.0418, 0.8390, 0.0057, 0.1135], grad_fn=<SoftmaxBackward0>)\n",
+      "tensor(2.1755, grad_fn=<NegBackward0>)\n",
+      "tensor(2.1755, grad_fn=<NegBackward0>)\n"
+     ]
+    }
+   ],
    "source": [
     "# verify the gradient using the torch library\n",
     "# torch should give you the exact same gradient\n",
-    "import torch\n"
+    "import torch\n",
+    "\n",
+    "logits = torch.tensor([0.0, 3.0, -2.0, 1.0])\n",
+    "logits.requires_grad = True\n",
+    "print(logits)\n",
+    "probs = torch.softmax(logits, 0)\n",
+    "print(probs)\n",
+    "loss = -torch.log(probs[3])\n",
+    "print(loss)\n",
+    "loss.backward()\n",
+    "print(loss)\n"
    ]
   }
  ],
